--- a/main.css
+++ b/main.css
@@ -1,1 +1,54 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  padding-right: 175px;
+  align-items: center;
+ }
+
+body div {
+  position: relative;
+}
+header {
+  padding: 0px 0;
+  color: #000000;
+}
+header .row,
+
+footer .row {
+  display: flex;
+  align-items: center;
+}
+
+header h1 {
+  font-weight: 700;
+  margin: 0;
+}
+
+header nav {
+  display: flex;  
+  justify-content: flex-end;
+}
+
+header p {
+  padding: 0px 20px;  
+  margin: 0;
+}
+footer {
+  font-size: 12px;
+  padding: 20px 0;
+}
+
+footer .col-sm-8 {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer ul {
+  list-style: none;
+}
+
+footer li img {
+  width: 32px;
+  height: 32px;
+}
 
